2001-11-0x - v0.15.1:
  * Fix linking when there is no libtermcap but there is curses or ncurses. (Reported by Erik-Jan Vlieger)
2001-11-01 - v0.15:
  * Fixes for gcc 3.0 compilation.
  * Print time remaining in XhXXmXXs format, rather than XXXXs.
  * Use termcap for clearing progress lines, fixes problems with chars getting left at the end.
  * Use 64bit int for total bytes/lines if available.  Fixes negative/weird time left displays for large queues. 
  * Make timeout a config option.
  * Add manpage for ngetlite.
  * No longer attempt to set user/group in make install.
  * Add messageid (mid) keyword to -R expressions.
  * Add more documentation of win32 build/usage.
  * Error on retrieving headers will retry and try other servers instead of giving up.
  * Errors other than "article not available" on retrieving articles are handled correctly.
  * Added unequal_line_error config option and made default be a warning rather than an error. (since the "unequal line count" error was more of an annoyance than anything.)
  * Added an exit error status for article retrieval errors.
  * Added ok and warning counts on exit.
  * Print part number/total parts in retrieval info.
  * Only mark as successfully recieved if all parts were successufully decoded. (Rather than if any of the parts were decoded ok).
  * Fixed -k mode printing "not decoding, keeping temp files." rather than "decoded ok, keeping temp files."

2001-08-02 - v0.14:
  * Fix exception if files in current dir contained '{' or '}'. (reported by Brian Keefer)
  * Remove autoconf AC_C_CONST, its only for C progs and breaks g++.
  * Fixed east/west of GMT timezone discrepancy if timezone var not found by configure.
  * Add support for ISO8601 date format and some minor fixes to current date parsing.
  * -T now prints date in ISO8601 format, rather than seconds since the epoch. 